@@ -2,7 +2,7 @@ Package: PureCN
 Type: Package
 Title: Copy number calling and SNV classification using
     targeted short read sequencing
-Version: 1.23.26
+Version: 1.23.27
 Date: 2021-09-11
 Authors@R: c(person("Markus", "Riester",
                     role = c("aut", "cre"),
